# funding

./: LICENSE  README.md  funding.ipynb  pyproject.toml
data/: README.md  sample-funding.json  sample-org.json
