[tool.poetry]
name = "funding"
version = "0.1.0"
description = "Uncovering funding trends in private capital."
authors = ["Armin Catovic <armin.catovic@hotmail.se>"]

[tool.poetry.dependencies]
python = "^3.6"
gensim = "3.8.3"
numpy = "1.19.5"
matplotlib = "3.3.4"
pandas = "1.1.5"
scikit-learn = "0.24.2"
ipython = "7.15.0"
jupyter = "1.0.0"
jedi = "0.17.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"